--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
 
     <!--Portfolio-->
     <main>
-      <section class="portfolio">
+      <section class="portfolio-menu">
         <div class="container">
           <h1 hidden>Портфолио</h1>
           <ul class="portfolio-list">
@@ -80,8 +80,7 @@
               <button class="portfolio-link" type="button">Маркетинг</button>
             </li>
           </ul>
-        </div>
-        <div class="flex-container">
+
           <!--Projects-->
           <ul class="projects list">
             <div class="flex-element">
