--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
       <section class="qualities">
         <div class="container">
         <h2 hidden>Преимущества</h2>
+        
         <ul class="quality-list">
+          <div class="quality-slot">
           <li class="quality-item">
             <h3 class="quality-title">Внимание к деталям</h3>
             <p class="quality-text">
@@ -79,6 +81,8 @@
               формированию позиции.
             </p>
           </li>
+          </div>
+          <div class="quality-slot">
           <li class="quality-item">
             <h3 class="quality-title">Пунктуальность</h3>
             <p class="quality-text">
@@ -86,6 +90,8 @@
               влечет за собой.
             </p>
           </li>
+          </div>
+          <div class="quality-slot">
           <li class="quality-item">
             <h3 class="quality-title">Планирование</h3>
             <p class="quality-text">
@@ -93,6 +99,8 @@
               степени обуславливает.
             </p>
           </li>
+          </div>
+          <div class="quality-slot">
           <li class="quality-item">
             <h3 class="quality-title">Современные технологии</h3>
             <p class="quality-text">
@@ -100,6 +108,7 @@
               плановых заданий.
             </p>
           </li>
+          </div>
         </ul>
         </div>
       </section>
@@ -140,26 +149,34 @@
         <div class="container">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list">
+          <div class="team-slot">
           <li class="team-item">
             <img src="./images/pd.jpg" width="270" alt="фото Демьяненко" />
             <h3 class="team-heading">Игорь Демьяненко</h3>
             <p class="team-position" lang="en">Product Designer</p>
           </li>
+          </div>
+          <div class="team-slot">
           <li class="team-item">
             <img src="./images/fd.jpg" width="270" alt="фото Репина" />
             <h3 class="team-heading">Ольга Репина</h3>
             <p class="team-position" lang="en">Frontend Developer</p>
           </li>
+          </div>
+          <div class="team-slot">
           <li class="team-item">
             <img src="./images/Mar.jpg" width="270" alt="фото Тарасов" />
             <h3 class="team-heading">Николай Тарасов</h3>
             <p class="team-position" lang="en">Marketing</p>
           </li>
+          </div>
+          <div class="team-slot">
           <li class="team-item">
             <img src="./images/uid.jpg" width="270" alt="фото Ермаков" />
             <h3 class="team-heading">Михаил Ермаков</h3>
             <p class="team-position" lang="en">UI Designer</p>
           </li>
+          </div>
         </ul>
         </div>
       </section>
