--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <a class="header-logo link" href="/"
           ><span class="accent">Web</span>Studio</a
         >
-          <ul class="site-nav list">
-            <li class="site-nav item">
+          <ul class="site-nav_list">
+            <li class="site-nav_item">
               <a class="nav-link link active" href="index.html">Студия</a>
             </li>
-            <li class="site-nav item">
+            <li class="site-nav_item">
               <a class="nav-link link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="site-nav item">
+            <li class="site-nav_item">
               <a class="nav-link link" href="contacts.html">Контакты</a>
             </li>
           </ul>
