--- a/portfolio.html
+++ b/portfolio.html
@@ -23,23 +23,22 @@
   </head>
 
   <body>
-    <!--Header-->
     <header class="page-header">
+      <!--Полная информация о компании-->
       <div class="container">
-        <!--Detailed information about company-->
         <nav class="header-nav">
           <a class="header-logo link" href="/"
             ><span class="accent">Web</span>Studio</a
           >
-          <ul class="site-nav list">
-            <li class="site-nav item">
+          <ul class="site-nav_list">
+            <li class="site-nav_item">
               <a class="nav-link" href="index.html">Студия</a>
             </li>
-            <li class="site-nav item">
+            <li class="site-nav_item">
               <a class="nav-link link active" href="">Портфолио</a>
             </li>
-            <li class="site-nav item">
-              <a class="nav-link" href="">Контакты</a>
+            <li class="site-nav_item">
+              <a class="nav-link link" href="contacts.html">Контакты</a>
             </li>
           </ul>
           <ul class="contact-list">
@@ -49,7 +48,7 @@
               >
             </li>
             <li class="contact-item">
-              <a class="contact-llink" href="tel:+380961111111"
+              <a class="contact-link" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
             </li>
