--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <ul class="services-list">
             <li class="services-element">
               <img
-                class="services-list element picture"
+                class="services-item element picture"
                 src="./images/box 1.jpg"
                 width="370"
                 alt="написание кода"
@@ -120,7 +120,7 @@
             </li>
             <li class="services-element">
               <img
-                class="services-list element picture"
+                class="services-item element picture"
                 src="./images/box 2.jpg"
                 width="370"
                 alt="валидация по"
@@ -128,7 +128,7 @@
             </li>
             <li class="services-element">
               <img
-                class="services-list elemet picture"
+                class="services-item elemet picture"
                 src="./images/box 3.jpg"
                 width="370"
                 alt="подбор цветовой палитры"
@@ -145,29 +145,37 @@
             <div class="team-slot">
               <li class="team-item">
                 <img src="./images/pd.jpg" width="270" alt="фото Демьяненко" />
-                <h3 class="team-heading">Игорь Демьяненко</h3>
-                <p class="team-position" lang="en">Product Designer</p>
+                <div class="team-info">
+                  <h3 class="team-heading">Игорь Демьяненко</h3>
+                  <p class="team-position" lang="en">Product Designer</p>
+                </div>
               </li>
             </div>
             <div class="team-slot">
               <li class="team-item">
                 <img src="./images/fd.jpg" width="270" alt="фото Репина" />
-                <h3 class="team-heading">Ольга Репина</h3>
-                <p class="team-position" lang="en">Frontend Developer</p>
+                <div class="team-info">
+                  <h3 class="team-heading">Ольга Репина</h3>
+                  <p class="team-position" lang="en">Frontend Developer</p>
+                </div>
               </li>
             </div>
             <div class="team-slot">
               <li class="team-item">
                 <img src="./images/Mar.jpg" width="270" alt="фото Тарасов" />
-                <h3 class="team-heading">Николай Тарасов</h3>
-                <p class="team-position" lang="en">Marketing</p>
+                <div class="team-info">
+                  <h3 class="team-heading">Николай Тарасов</h3>
+                  <p class="team-position" lang="en">Marketing</p>
+                </div>
               </li>
             </div>
             <div class="team-slot">
               <li class="team-item">
                 <img src="./images/uid.jpg" width="270" alt="фото Ермаков" />
-                <h3 class="team-heading">Михаил Ермаков</h3>
-                <p class="team-position" lang="en">UI Designer</p>
+                <div class="team-info">
+                  <h3 class="team-heading">Михаил Ермаков</h3>
+                  <p class="team-position" lang="en">UI Designer</p>
+                </div>
               </li>
             </div>
           </ul>
