--- a/portfolio.html
+++ b/portfolio.html
@@ -82,91 +82,95 @@
 
           <!--Projects-->
           <ul class="projects list">
-            <div class="flex-element">
-              <li class="projects-item">
-                <img
-                  src="./images/techno.jpg"
-                  width="370"
-                  alt="фото нашей команды"
-                />
+            <li class="projects-item">
+              <img
+                src="./images/techno.jpg"
+                width="370"
+                alt="фото нашей команды"
+              />
+              <div class="flex-element">
                 <h2 class="projects-title">Технокряк</h2>
                 <p class="projects-desc">Веб-сайт</p>
-              </li>
-            </div>
-            <div class="flex-element">
-              <li class="projects-item">
-                <img
-                  src="./images/basketball.jpg"
-                  width="370"
-                  alt="игра в баскетбол"
-                />
+              </div>
+            </li>
+
+            <li class="projects-item">
+              <img
+                src="./images/basketball.jpg"
+                width="370"
+                alt="игра в баскетбол"
+              />
+              <div class="flex-element">
                 <h2 class="projects-title" lang="en">
                   Постер New Orlean vs Golden Star
                 </h2>
                 <p class="projects-desc">Дизайн</p>
-              </li>
-            </div>
-            <div class="flex-element">
-              <li class="projects-item">
-                <img
-                  src="./images/seafood.jpg"
-                  width="370"
-                  alt="логотип ресторана"
-                />
+              </div>
+            </li>
+
+            <li class="projects-item">
+              <img
+                src="./images/seafood.jpg"
+                width="370"
+                alt="логотип ресторана"
+              />
+              <div class="flex-element">
                 <h2 class="projects-title" lang="en">Ресторан Seafood</h2>
                 <p class="projects-desc">Приложение</p>
-              </li>
-            </div>
-            <div class="flex-element">
-              <li class="projects-item">
-                <img src="./images/prime.jpg" width="370" alt="наушники" />
+              </div>
+            </li>
+
+            <li class="projects-item">
+              <img src="./images/prime.jpg" width="370" alt="наушники" />
+              <div class="flex-element">
                 <h2 class="projects-title" lang="en">Проект Prime</h2>
                 <p class="projects-desc">Маркетинг</p>
-              </li>
-            </div>
-            <div class="flex-element">
-              <li class="projects-item">
-                <img src="./images/boxes.jpg" width="370" alt="коробки" />
+              </div>
+            </li>
+
+            <li class="projects-item">
+              <img src="./images/boxes.jpg" width="370" alt="коробки" />
+              <div class="flex-element">
                 <h2 class="projects-title" lang="en">Проект Boxes</h2>
                 <p class="projects-desc">Приложение</p>
-              </li>
-            </div>
-            <div class="flex-element">
-              <li class="projects-item">
-                <img src="./images/pc.jpg" width="370" alt="компьютер" />
+              </div>
+            </li>
+
+            <li class="projects-item">
+              <img src="./images/pc.jpg" width="370" alt="компьютер" />
+              <div class="flex-element">
                 <h2 class="projects-title" lang="en">
                   Inspiration has no Borders
                 </h2>
                 <p class="projects-desc">Веб-сайт</p>
-              </li>
-            </div>
-            <div class="flex-element">
-              <li class="projects-item">
-                <img src="./images/magazine.jpg" width="370" alt="журнал" />
+              </div>
+            </li>
+
+            <li class="projects-item">
+              <img src="./images/magazine.jpg" width="370" alt="журнал" />
+              <div class="flex-element">
                 <h2 class="projects-title" lang="en">
                   Издание Limited Edition
                 </h2>
                 <p class="projects-desc">Дизайн</p>
-              </li>
-            </div>
-            <div class="flex-element">
-              <li class="projects-item">
-                <img
-                  src="./images/lab.jpg"
-                  width="370"
-                  alt="рекламная брошюра"
-                />
+              </div>
+            </li>
+
+            <li class="projects-item">
+              <img src="./images/lab.jpg" width="370" alt="рекламная брошюра" />
+              <div class="flex-element">
                 <h2 class="projects-title" lang="en">Проект LAB</h2>
                 <p class="projects-desc">Маркетинг</p>
-              </li>
-            </div>
-            <div class="flex-element">
-              <li class="projects-item">
-                <img src="./images/laptop.jpg" width="370" alt="ноутбук" />
+              </div>
+            </li>
+
+            <li class="projects-item">
+              <img src="./images/laptop.jpg" width="370" alt="ноутбук" />
+              <div class="flex-element">
                 <h2 class="projects-title" lang="en">Growing Business</h2>
                 <p class="projects-desc">Приложение</p>
-              </li>
-            </div>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
